--- a/pom.xml
+++ b/pom.xml
@@ -4,26 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.codewind</groupId>
     <artifactId>bytecode-demo</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
-        <module>asm-agent</module>
-        <module>client-test</module>
-        <module>instrument-start</module>
+        <module>agent/asm-agent</module>
+        <module>endpoint/client-endpoint</module>
+        <module>endpoint/springboot-endpoint</module>
     </modules>
-
-    <dependencyManagement>
-       <dependencies>
-           <dependency>
-               <groupId>org.example</groupId>
-               <artifactId>asm-agent</artifactId>
-               <version>${project.version}</version>
-           </dependency>
-       </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
